fix(ui): ensure canvas width uses calc(100vw - sidebars) to avoid off-screen white

--- a/src/index.css
+++ b/src/index.css
@@ -56,11 +56,11 @@ canvas {
 }
 
 .board-canvas {
-  width: 100vw;
+  width: calc(100vw - var(--left-w-cur, 0px) - var(--right-w-cur, 0px));
   height: calc(100vh - var(--toolbar-h, 56px) - var(--statusbar-h, 22px));
   display: block;
   margin-left: var(--left-w-cur, 0px);
-  margin-right: var(--right-w-cur, 0px);
+  margin-right: 0;
 }
 
 /* Tile thumbnails */
